Pre final framework commit